--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react": "^16.13.0",
     "react-animations": "^1.0.0",
     "react-bootstrap": "^1.0.0-beta.17",
+    "react-container-dimensions": "^1.4.1",
     "react-dom": "^16.13.0",
     "react-particles-js": "^2.7.1",
     "react-responsive-carousel": "^3.1.51",
